Added Authentication Controller
